--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       গরুর মন বোঝা, 
       gorur mone bujho, 
       gorur mood detector, 
-      funny cow, 
-      cow emotions, 
-      animal mood, 
-      গরু, 
-      cow app, 
+      funny cow detector, 
+      cow emotions detector, 
+      animal mood detector, 
+      গরু detector, 
+      cow app detector, 
       playful cow, 
       happy cow, 
       stressed cow, 
@@ -38,7 +38,8 @@
       cow photo upload, 
       গরুর ছবি, 
       cow fun, 
-      cow happiness, 
+      detector, 
+      cow happiness , 
       cow game, 
       cow care, 
       গরু খুশি, 
